fix footer icon spacing

--- a/src/style.css
+++ b/src/style.css
@@ -355,9 +355,9 @@ html {
   .home-about-social-links {
     justify-content: center !important;
     padding-top: 15px !important;
-    /* display: inline-block !important; */
+    display: inline-block !important;
     position: relative !important;
-    /*padding-inline-start: 0 !important; */
+    padding-inline-start: 0 !important; 
   }
   
   .home-social-icons {
